--- a/Dockerfile.devel
+++ b/Dockerfile.devel
@@ -7,6 +7,8 @@ FROM ${BASE_IMAGE:-zephyrprojectrtos/ci:latest}
 RUN apt-get -y update && \
 	apt-get -y upgrade && \
 	apt-get install --no-install-recommends -y \
+	nano \
+	minicom \
 	openbox \
 	python3-xdg \
 	libpython3-dev \
@@ -15,7 +17,8 @@ RUN apt-get -y update && \
 	xterm \
 	xz-utils \
 	bsdmainutils \
-	bash-completion
+	bash-completion\
+	udev
 
 # Clean up stale packages
 RUN apt-get clean -y && \
