run explicit own entrypoint.sh instead devcontainer & mount home form local .container_home to container's home  & install oh my bash

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,8 +6,10 @@
   "build": {
     "dockerfile": "../Dockerfile.devel"
   },
+  "overrideCommand": false,
   "mounts": [
-    "source=${localEnv:LOCAL_WORKSPACE_PATH},target=/workdir,type=bind"
+    "source=${localEnv:LOCAL_WORKSPACE_PATH},target=/workdir,type=bind",
+    "source=${localEnv:HOME}/.container_home,target=/home/user,type=bind"
   ],
   "workspaceFolder": "/workdir",
 
